<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textInsc"
    android:textStyle="bold"
    android:textColor="#D8D8D8"
    android:textSize="30sp"/>
    <Button
        android:id="@+id/inscr_chauffeur"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:text="@string/inscr_chauffeur"
        android:textSize="25sp"
        android:textColor="#000000"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:textStyle="bold"
        android:shadowRadius="5"
        android:background="@drawable/buttonshape"/>
    <Button 
        android:id="@+id/inscr_client"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/inscr_client"
        android:textSize="25sp"
        android:textColor="#000000"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:textStyle="bold"
        android:shadowRadius="5"
        android:background="@drawable/buttonshape"/>
    <Button 
        android:id="@+id/retourMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retourMain"
        android:textColor="#D8D8D8"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginTop="78dp"
        android:background="@android:color/transparent"/>
</LinearLayout>