<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/textLogin"
    android:textStyle="bold"
    android:textColor="#D8D8D8"
    android:textSize="30sp"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp">
        <RadioButton android:id="@+id/cocherClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cocherClient"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:layout_weight="1"/>
        <RadioButton android:id="@+id/cocherChauffeur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cocherChauffeur"
            android:layout_alignParentRight="true"
            android:onClick="onRadioButtonClicked"
            android:layout_weight="1"/>
    </RadioGroup>
    <EditText 
        android:id="@+id/nomUtil"
        android:layout_marginTop="20dip"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:hint="Courriel"
        android:textColorHint="#000000"
        android:layout_marginLeft="10dp"
        android:background="@drawable/edittextshape"
        android:gravity="center"/>
    <EditText
        android:id="@+id/motDePasse"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dip"
        android:hint="@string/motDePasse"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:layout_marginLeft="10dp"
        android:background="@drawable/edittextshape"
        android:gravity="center"/>
    <Button 
        android:id="@+id/authentication"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dip"
        android:text="@string/authentication"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:background="@drawable/buttonshape"/>
    <TextView
    android:id="@+id/resultat"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="15sp"
    android:layout_marginLeft="20dip"
    android:textColor="#8A0808"
    android:layout_marginTop="50dp"/>
    <Button 
        android:id="@+id/retourMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/retourMain"
        android:textAllCaps="false"
        android:textColor="#D8D8D8"
        android:background="@android:color/transparent"/>
</LinearLayout>