<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/text"
    android:textStyle="bold"
    android:textColor="#CCFFDD"
    android:textSize="30sp"
    android:fontFamily="Arial"/>
    <Button 
        android:id="@+id/inscription"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/inscription"
        android:textSize="30sp"
        android:textColor="#000000"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:textStyle="bold"
        android:shadowRadius="5"
        android:background="@drawable/buttonshape"/>
    <Button 
        android:id="@+id/login"
        android:layout_marginTop="10dp"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:shadowRadius="5"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:background="@drawable/buttonshape"/>
</LinearLayout>