<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <TextView
        android:id="@+id/bienvenue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#D8D8D8"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/commentaire"
        android:layout_marginTop="20dp"
        android:layout_width="380dp"
        android:layout_height="30dp"
        android:textColor="#000000"
        android:hint="Un petit message a votre chauffeur?"
        android:textColorHint="#000000"
        android:background="#ffffff"
        android:gravity="center"/>
    <Button
        android:id="@+id/commande"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:shadowColor="#000000"
        android:text="@string/commandeText"/>
    <fragment
        android:id="@+id/googleMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_above="@+id/latlongLocation" />
    <TextView
        android:id="@+id/latlongLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#ffffffff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />
    <TextView
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#D8D8D8"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/resultat"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="#D8D8D8" />
    <Button 
        android:id="@+id/deconnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/deconnecter"
        android:textColor="#D8D8D8"
        android:textSize="13dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>
    <TextView
    android:id="@+id/copyright"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="10sp"
    android:text="@string/copyright"
    android:layout_marginLeft="220dip"
    android:textColor="#000000"/>
</LinearLayout>